# answerEvallm

./: .gitignore  README.md  answer_eval.py  answer_eval_server.py  evaluate_response.py  main.py  pyproject.toml  test_answer_eval.py
docs/: 01-Overview.md
static/: custom.css
templates/: qa_form.html
