[tool.poetry]
name = "answerEvallm"
version = "0.1.0"
description = "Evaluate the quality of an answer to a question"
authors = ["Adnantium <adnantium@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
langchain = "^0.1.0"
langserve = "^0.0.38"
openai = "^1.6.1"
pydantic = "1.10.13"
sse-starlette = "^1.8.2"
tiktoken = "^0.5.2"
uvicorn = "^0.24.0.post1"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.11"
pytest = "^8.0.0"
python-multipart = "^0.0.7"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
